monitoring/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-aws-lab-kube-pr-prometheus
                port:
                  number: 9090
